--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,8 @@
 <div class="container">
   <h1>All Restaurants</h1>
   <%@restaurants.each do |restaurant| %>
-  <%= link_to restaurant.name, restaurant_path(restaurant) %>
+  <h3><%= restaurant.name %></h3>
+  <%= link_to "See details", restaurant_path(restaurant), class: "btn btn-primary"%>
   <% end %>
 
 <%= link_to "Add a new restaurant", new_restaurant_path %>
