--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -24,4 +24,4 @@
   <%= f.submit class: 'btn btn-primary' %>
 <% end %>
 <%= link_to "Back to all restaurants", restaurants_path %>
-
+<%= link_to "Add a review", new_restaurant_review_path(@restaurant) %>
